--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME = animal
 
-SRC = Cat.cpp Dog.cpp Animal.cpp main.cpp
+SRC = Cat.cpp Dog.cpp Animal.cpp main.cpp WrongAnimal.cpp WrongCat.cpp
 
 CFLAGS =  -Wall -Werror -Wextra -std=c++98
 
